# communitySOTD

./: .env.example  .gitignore  README.md  pyproject.toml  settings.yml.example
sotdbot/: main.py
